--- a/src/App.css
+++ b/src/App.css
@@ -14,5 +14,15 @@
 }
 
 .div1{
-  margin-left: 700px;
+  margin-left: 480px;
+  border: 3px solid black;
+  max-width: 400px;
+  padding-left: 200px;
+  padding-bottom: 40px;
+  background-color: #FFFFCC;
+  margin-top: 100px;
+}
+
+.heading{
+  padding-right: 140px;
 }
